--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </nav>
         </div>
     </header>
+    <img class="banner" src="imagens/genshin_impact.jpg" alt="Genshin Impact">
     <main>
         <p>Texto</p>
     </main>
