--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             </nav>
         </div>
     </header>
+    <p class="intro">Projeto de Genshin Impact com intuito de facilitar e auxiliar na construção de build dos personagens</p>
+    <img class="banner" src="imagens/genshin_impact.jpg" alt="Genshin Impact">
     <main>
-        <p>Texto</p>
     </main>
     <footer>
         <p class="copyright">&copy; copyright Genshin Tools - 2021</p>
