--- a/paginas/artefatos/artefatos.html
+++ b/paginas/artefatos/artefatos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../json/dados-personagens.json">
     <link rel="stylesheet" href="../../reset.css">
     <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="style-artefatos.css">
 </head>
 <body>
     <header>
@@ -24,9 +25,35 @@
         </div>
     </header>
     <main>
-        <img src="../../imagens/artefatos/gladiator.png" alt="Gladiador">
-        <img src="../../imagens/artefatos/troupe.png" alt="Trupe">
-        <p> Gladiador | Trupe</p>
+        <img class="artefatos" src="../../imagens/artefatos/gladiators_finale.png" alt="Gladiator's Finale">
+        <img class="artefatos" src="../../imagens/artefatos/wanderers_troupe.png" alt="Wonderer's Troupe">
+        <img class="artefatos" src="../../imagens/artefatos/thundersoother.png" alt="Thundersoother">
+        <img class="artefatos" src="../../imagens/artefatos/thundering_fury.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/maiden_beloved.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/viridescent_venerer.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/crimson_witch.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/lavawalker.png" alt="">
+        <div>
+            <p class="descricao">Gladiator's Finale | Wonderer's Troupe | Thundersoother | Thunderinf Fury | Maiden Beloved | Viridescent Venerer | Crimson Witch | Lavawalker</p>
+        </div>
+        <img class="artefatos" src="../../imagens/artefatos/noblesse_oblige.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/bloodstained_chivalry.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/archaic_petra.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/retracing_bolide.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/blizzard_strayer.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/heart_of_depth.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/tenacity_of_the_milelith.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/pale_flame.png" alt="">
+        <div>
+            <p class="descricao">Noblesse Oblige | Bloodstained Chivalry | Archaic Petra | Retracing Bolide | Blizzard Strayer | Heart of Depth | Tenacity of the Milelith | Pale Flame</p>
+        </div>
+        <img class="artefatos" src="../../imagens/artefatos/shimenawa_reminiscense.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/emblem_of_severed_fate.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/husk_of_opulent_dreams.png" alt="">
+        <img class="artefatos" src="../../imagens/artefatos/ocean-hued_clam.png" alt="">
+        <div>
+            <p class="descricao">Shimenawa Reminiscense | Emblem of Severed Fate | Husk of Opulent Dreams | Ocean-Hued Clam</p>
+        </div>
     </main>
     <footer>
         <p class="copyright">&copy; copyright Genshin Tools - 2021</p>
