--- a/paginas/personagens/personagens.html
+++ b/paginas/personagens/personagens.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../json/dados-personagens.json">
     <link rel="stylesheet" href="../../reset.css">
     <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="style-personagens.css">
 </head>
 <body>
     <header>
@@ -24,10 +25,16 @@
         </div>
     </header>
     <main>
-        <img src="../../imagens/personagens/albedo_1.png" alt="Albedo">
-        <p>Albedo</p>
-        <img src="../../imagens/personagens/aloy_1.png" alt="Aloy">
-        <p>Aloy</p>
+        <img class="personagens" src="../../imagens/personagens/albedo_1.png" alt="Albedo">
+        <img class="personagens" src="../../imagens/personagens/aloy_1.png" alt="Aloy">
+        <div class="descricao">
+            <ul>
+                <li>Albedo</li>
+            </ul>
+            <ul>
+                <li>Aloy</li>
+            </ul>
+        </div>
     </main>
     <footer>
         <p class="copyright">&copy; copyright Genshin Tools - 2021</p>
