--- a/paginas/calculadora/calculadora.html
+++ b/paginas/calculadora/calculadora.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../json/dados-personagens.json">
     <link rel="stylesheet" href="../../reset.css">
     <link rel="stylesheet" href="../../style.css">
+	<link rel="stylesheet" href="style-calculadora.css">
 </head>
 <body>
     <header>
@@ -24,7 +25,10 @@
         </div>
     </header>
     <main>
-        <p>Texto</p>
+		<div class="busca">
+			<input type="text" name="txt" placeholder="Buscar">
+			<p class="legenda">Escolha o personagem</p>
+		</div>
     </main>
     <footer>
         <p class="copyright">&copy; copyright Genshin Tools - 2021</p>
