--- a/paginas/calculadora/calculadora.html
+++ b/paginas/calculadora/calculadora.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora - Genshin Tools</title>
-    <link rel="stylesheet" href="../../json/dados-personagens.json">
+    <link rel="stylesheet" href="calculador.js">
     <link rel="stylesheet" href="../../reset.css">
     <link rel="stylesheet" href="../../style.css">
 	<link rel="stylesheet" href="style-calculadora.css">
@@ -31,7 +31,7 @@
 		</div>
     </main>
     <footer>
-        <p class="copyright">&copy; copyright Genshin Tools - 2021</p>
+        <p class="copyright">&copy; copyright Genshin Tools - 2022</p>
     </footer>
 </body>
 </html>
