--- a/index.html
+++ b/index.html
@@ -13,19 +13,34 @@
     <header>
         <div class="caixa">
             <h1><img src="imagens/genshin_impact_logo.svg" alt="Logo Genshin Tools"></h1>
-            <nav>
+            <nav class="nav-header">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="paginas/personagens/personagens.html">Personagens</a></li>
-                    <li><a href="paginas/artefatos/artefatos.html">Artefatos</a></li>
-                    <li><a href="paginas/calculadora/calculadora.html">Calculadora</a></li>
+                    <li class="li-header"><a class="a-header" href="index.html">Home</a></li>
+                    <li class="li-header"><a class="a-header" href="paginas/personagens/personagens.html">Personagens</a></li>
+                    <li class="li-header"><a class="a-header" href="paginas/artefatos/artefatos.html">Artefatos</a></li>
+                    <li class="li-header"><a class="a-header" href="paginas/calculadora/calculadora.html">Calculadora</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <p class="intro">Projeto de Genshin Impact com intuito de facilitar e auxiliar na construção de build dos personagens</p>
+    <div class="intro">
+        <p>Projeto de Genshin Impact com intuito de facilitar e auxiliar na construção de build dos personagens</p>
+        <p>Criado e Editado por: Vinicius Yuji Nishioka</p><br>
+        <p>Minhas Redes:</p><br>
+        <a href="https://www.linkedin.com/in/yuji-nishioka-643b22218/" class="redes-sociais">LinkedIn</a><br><br>
+        <a href="https://github.com/yujinishioka" class="redes-sociais">GitHub</a>
+    </div>
     <img class="banner" src="imagens/genshin_impact.jpg" alt="Genshin Impact">
     <main>
+        <div class="consideracoes">
+            <h2>Agradecimento as páginas de consulta</h2>
+            <nav class="nav-consideracoes">
+                <ul>
+                    <li class="li-consideracoes"><a class="a-consideracoes" href="https://genshin.honeyhunterworld.com/">Honey Impact</a>: pelas informações e dados</li>
+                    <li class="li-consideracoes"><a class="a-consideracoes" href="https://genshin-impact.fandom.com/wiki/">Genshin Impact Fandom</a>: pelas imagens</li>
+                </ul>
+            </nav>
+        </div>
     </main>
     <footer>
         <p class="copyright">&copy; copyright Genshin Tools - 2022</p>
