--- a/paginas/personagens/personagens.html
+++ b/paginas/personagens/personagens.html
@@ -14,25 +14,30 @@
     <header>
         <div class="caixa">
             <h1><img src="../../imagens/genshin_impact_logo.svg" alt="Logo Genshin Tools"></h1>
-            <nav>
+            <nav class="nav-header">
                 <ul>
-                    <li><a href="../../index.html">Home</a></li>
-                    <li><a href="personagens.html">Personagens</a></li>
-                    <li><a href="../artefatos/artefatos.html">Artefatos</a></li>
-                    <li><a href="../calculadora/calculadora.html">Calculadora</a></li>
+                    <li class="li-header"><a class="a-header" href="../../index.html">Home</a></li>
+                    <li class="li-header"><a class="a-header" href="personagens.html">Personagens</a></li>
+                    <li class="li-header"><a class="a-header" href="../artefatos/artefatos.html">Artefatos</a></li>
+                    <li class="li-header"><a class="a-header" href="../calculadora/calculadora.html">Calculadora</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <img class="personagens" src="../../imagens/personagens/albedo_1.png" alt="Albedo">
-        <img class="personagens" src="../../imagens/personagens/aloy_1.png" alt="Aloy">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/f/f8/Character_Albedo_Card.png/revision/latest?cb=20210302092013" alt="Albedo">
+        <img class="personagens" src="../../imagens/personagens/aloy_1.jpg" alt="Aloy">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/2/26/Character_Amber_Card.jpg/revision/latest?cb=20201024042115" alt="Amber">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/c/cf/Character_Arataki_Itto_Card.jpg/revision/latest/scale-to-width-down/1000?cb=20211011100147" alt="Arataki Itto">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/9/93/Character_Barbara_Card.jpg/revision/latest/scale-to-width-down/1000?cb=20201024042228" alt="Barbara">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/8/84/Character_Beidou_Card.jpg/revision/latest/scale-to-width-down/1000?cb=20200401024902" alt="Beidou">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/7/7f/Character_Bennett_Card.jpg/revision/latest/scale-to-width-down/1000?cb=20201024042332" alt="Bennett">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/f/fa/Character_Chongyun_Card.jpg/revision/latest/scale-to-width-down/1000?cb=20201024042420" alt="Chongyun">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/4/45/Character_Diluc_Card.jpg/revision/latest/scale-to-width-down/1000?cb=20210529160947" alt="Diluc">
+        <img class="personagens" src="https://static.wikia.nocookie.net/gensin-impact/images/0/08/Character_Diona_Card.png/revision/latest/scale-to-width-down/1000?cb=20201107193459" alt="Diona">
         <div class="descricao">
             <ul>
-                <li>Albedo</li>
-            </ul>
-            <ul>
-                <li>Aloy</li>
+                <li></li>
             </ul>
         </div>
     </main>
