--- a/paginas/artefatos/artefatos.html
+++ b/paginas/artefatos/artefatos.html
@@ -14,12 +14,12 @@
     <header>
         <div class="caixa">
             <h1><img src="../../imagens/genshin_impact_logo.svg" alt="Logo Genshin Tools"></h1>
-            <nav>
+            <nav class="nav-header">
                 <ul>
-                    <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../personagens/personagens.html">Personagens</a></li>
-                    <li><a href="artefatos.html">Artefatos</a></li>
-                    <li><a href="../calculadora/calculadora.html">Calculadora</a></li>
+                    <li class="li-header"><a class="a-header" href="../../index.html">Home</a></li>
+                    <li class="li-header"><a class="a-header" href="../personagens/personagens.html">Personagens</a></li>
+                    <li class="li-header"><a class="a-header" href="artefatos.html" >Artefatos</a></li>
+                    <li class="li-header"><a class="a-header" href="../calculadora/calculadora.html" >Calculadora</a></li>
                 </ul>
             </nav>
         </div>
